log.txt
Traceback (most recent call last):
  File "/home/abdua786/code/uni/3/dissertation/dissertation/standard_run.py", line 1, in <module>
    from aneurysm_model_2D import AneurysmSimulation2D
  File "/home/abdua786/code/uni/3/dissertation/dissertation/aneurysm_model_2D.py", line 208
    from direct_bc import DirectTimeDependentBC      inlet = [x_array_left, y_array]
                                                     ^^^^^
SyntaxError: invalid syntax
